feat: add swagger docs for movies
