# handler/listMovies.go
@@ -7,6 +7,15 @@ import (
 	"github.com/viniciusdsouza/goverallratings/schemas"
 )
 
+// @BasePath /api/v1
+// @Summary List movies
+// @Tags Movies
+// @Accept json
+// @Produce json
+// @Success 200 {object} ListMovieResponse
+// @Failure 400 {object} ErrorResponse
+// @Failure 500 {object} ErrorResponse
+// @Router /movies [get]
 func ListMoviesHandler(ctx *gin.Context) {
 	movies := []schemas.Movie{}
 
