# handler/response.go
@@ -5,6 +5,7 @@ import (
 	"net/http"
 
 	"github.com/gin-gonic/gin"
+	"github.com/viniciusdsouza/goverallratings/schemas"
 )
 
 func sendError(ctx *gin.Context, code int, msg string) {
@@ -19,6 +20,36 @@ func sendSuccess(ctx *gin.Context, op string, content interface{}) {
 	ctx.Header("Content-type", "application/json")
 	ctx.JSON(http.StatusOK, gin.H{
 		"message": fmt.Sprintf("%s successfull", op),
-		"content":    content,
+		"content": content,
 	})
+}
+
+type ErrorResponse struct {
+	Message   string `json:"message"`
+	ErrorCode string `json:"errorCode"`
+}
+
+type CreateMovieResponse struct {
+	Message string                `json:"message"`
+	Data    schemas.MovieResponse `json:"data"`
+}
+
+type GetMovieResponse struct {
+	Message string                `json:"message"`
+	Data    schemas.MovieResponse `json:"data"`
+}
+
+type UpdateMovieResponse struct {
+	Message string                `json:"message"`
+	Data    schemas.MovieResponse `json:"data"`
+}
+
+type DeleteMovieResponse struct {
+	Message string                `json:"message"`
+	Data    schemas.MovieResponse `json:"data"`
+}
+
+type ListMovieResponse struct {
+	Message string                  `json:"message"`
+	Data    []schemas.MovieResponse `json:"data"`
 }
